# git_test

./: README.md
V1.4/RPC_linux/cpp/linux/DucoCobotAPI_demo/: CMakeLists.txt  CMakeLists.txt.user.4118926  CMakeLists.txt.user.e3488cd  DucoCobotAPI_demo.sln
V1.4/RPC_linux/cpp/linux/DucoCobotAPI_demo/DucoCobotAPI_demo/: DucoCobotAPI_demo.cpp  ReadMe.txt  stdafx.cpp
V1.4/RPC_linux/cpp/linux/include/: DucoCobot.h
V1.4/RPC_linux/python/DucoCobotAPI_py/: API_test.py  DucoCobot.py  Translate.py  cammer_pose3.py  cammer_pose4.py  demo.py  learn.py  pub1.py  sub1.py  sub_topic.py  test.py  test_UR.py
